<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/mycolor"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_android_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/myquestion"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="34dp">


        <Button
            android:id="@+id/true_button"
            android:text="@string/true_text"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
    <ImageButton
        android:contentDescription="@string/previous_text"
        android:id="@+id/previous_button"
        android:src="@android:drawable/ic_media_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:contentDescription="@string/next_text"
        android:id="@+id/next_button"
        android:src="@android:drawable/ic_media_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>